# Tona-lang

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon
include/: tconfig.ixx
include/ast/: tast.ixx  texpr.ixx
include/cfm/: tbitflag.ixx  tbuffer.ixx  tbyte.ixx  tfunctional.ixx  tstring.ixx  ttemplate.ixx
include/diagnostic/: tasmerror.ixx
include/io/: in.ixx
include/lexer/: tlexer.ixx  ttoken.ixx
include/parser/: tast.ixx  tparser.ixx
include/source/: tsourcefile.ixx
include/tasm/: tasm.ixx
include/type/: ttype.ixx  ttype_ctx.ixx
include/vm/: theap.ixx  topcode.ixx  tstack.ixx  tvm.ixx  vm_label.inc
src/: CMakeLists.txt  elysia.ixx  root.zig  tconfig.ixx  telysia.ixx  tona.h  ttypes.ixx  types.ixx
src/ast/: tast.ixx
src/cfm/: byte.ixx  tarena.ixx  tbuffer.ixx  tbyte.ixx  tfunctional.ixx  tstring.ixx
src/diagnostic/: tdiagnostic.ixx  terror.ixx  tioerror.ixx
src/io/: in.ixx
src/lexer/: lexer.ixx  lexer_label.inc  tlexer.ixx  token.ixx  ttoken.ixx
src/parser/: tast.ixx  texpr.ixx  tparser.ixx  tstmt.ixx
src/source/: tsourcefile.ixx
src/tasm/: tasm.ixx  tasm_token.ixx
src/type/: ttype.ixx  ttype_ctx.ixx
src/vm/: opcode.ixx  theap.ixx  topcode.ixx  tvm.ixx  vm.ixx  vm_label.inc
syntax/: variable.ta
tona/: telysia.ixx  tona.cpp  tona.zig
